# Celestia

./: .gitignore  CMakeLists.txt  README
src/celengine/: glcontext.cpp  render.cpp  texture.cpp
src/celestia/: CMakeLists.txt
src/celestia/gtk/: main.cpp
src/celestia/gtk3/: CMakeLists.txt  celestia-app-data.cpp  celestia-app-data.h  celestia-application.cpp  celestia-application.h  celestia-appwindow.cpp  celestia-appwindow.h  celestia-splash-window.cpp  celestia-splash-window.h  celestia.gresource.xml  celestia.ui  main.cpp
src/celestia/gtk3/data/: .gitignore  celestia.gresource.xml  celestia.ui  gschemas.compiled  menus.ui  openurldialog.ui  org.celestia.gschema.xml  splash.ui
src/celestia/openvr/: CMakeLists.txt  main.cpp
